--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
-html, body {
-    margin: 0;
-    padding: 0;
-}
+* {
+    box-sizing: border-box;
+}    
 
 body {
     background: no-repeat center center fixed; 
