--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
     background-size: cover;
     color:white;
     font-family: Arial, Helvetica, sans-serif;
-    text-shadow: 1px 1px 2px #474747;
+    text-shadow: 0px 0px 20px #aaaaaa;
 }
 
 main {
